Title: Replace author and project name, convert to library plugin with animation and particle support
Key features implemented:
- Updated project name from EmoteEngine to Aethelion across all files including build.gradle, settings.gradle, and plugin.yml
- Changed author from YourName to twicefear in plugin.yml and main class documentation
- Converted plugin from standalone emote system to library plugin that provides API for other developers
- Added Blockbench animation support through AnimationEngine and AnimationLoader classes
- Implemented custom particle effects system with JSON definitions via ParticleEffectLoader and ParticleEffectPlayer
- Added texture registration support for custom particles and animations through ResourcePackGenerator
- Created comprehensive AethelionAPI interface for external plugin integration
- Added bone scaling functionality with uniform and non-uniform scaling support
- Implemented resource pack generation with custom textures for particles and animations
- Added command system for testing and debugging library functionality

The plugin now serves as a developer library allowing other plugins to implement custom animations and particle effects without showing anything by itself, while supporting server-side texture and animation loading.